force-app/main/default/objects/Book__c/fields/Author_Country__c.field-meta.xml
<CustomField>
    <fullName>Author_Country__c</fullName>
    <label>Author Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Uk</fullName>
            </value>
            <value>
                <fullName>Nepal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>