force-app/main/default/objects/Book__c/fields/Author_Name__c.field-meta.xml
<CustomField>
    <fullName>Author_Name__c</fullName>
    <description>Author&apos;s name</description>
    <label>Author Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>