force-app/main/default/objects/Book__c/fields/Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Book_Name__c</fullName>
    <description>This will have book name</description>
    <inlineHelpText>add book name</inlineHelpText>
    <label>Book Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>