force-app/main/default/objects/Book__c/fields/discount__c.field-meta.xml
<CustomField>
    <fullName>discount__c</fullName>
    <label>discount</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>