force-app/main/default/objects/Book__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>This will use for book pricing</description>
    <inlineHelpText>Enter book price</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>