force-app/main/default/objects/Book__c/listViews/myTestQueue_Book.listView-meta.xml
<ListView>
    <fullName>myTestQueue_Book</fullName>
    <filterScope>Queue</filterScope>
    <label>myTestQueue</label>
    <queue>myTestQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>